--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>
-TS test
+TS test 2
 </title>
 <script type="text/javascript">  
   
@@ -28,6 +28,6 @@ document.body.appendChild(button);
 </script>
 </head>
 <body>
-<p>This is a TS test</p>
+<p>This is a TS test 2</p>
 </body>
 </html>
