--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>
-TS test 4 int+ext
+TS test 5
 </title>
 <script type="text/javascript" src="main.js"></script>
 <script type="text/javascript">  
@@ -50,8 +50,8 @@ function slide1and2() {
 <hr/>
 <script type="text/javascript">
   window.onload = function startEverything() {
-    slide1and2();
-    slide3and4();
+    // slide1and2(); // remember, it never returns
+    slide3and4(); // remember, it never returns
   }
 </script>
 </body>
