--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-<p>a</p>
-  <div style="text-align:center">
-  <span style="font: 4em Helvetica, Arial, sans-serif;" id="adjective-here">one</span>
-  </div>
-<p>b</p>
-  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif;" id="vocation-here">two</div>
-<p>c</p>
+  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif;">&nbsp;</div>
+  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif;" id="adjective-here">replaceable</div>
+  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif;">&nbsp;</div>
+  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif;" id="vocation-here">doppelganger</div>
 <script type="text/javascript">
   window.onload = function startEverything() {
     overall();
