--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<title>Pairs</title>
+<title>Top</title>
 <script type="text/javascript" src="main.js"></script>
 </head>
-<body>
-  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif;">&nbsp;</div>
-  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif;" id="adjective-here">replaceable</div>
-  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif;">&nbsp;</div>
-  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif;" id="vocation-here">doppelganger</div>
+<body style="background-color: black;">
+  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif; color: white;">&nbsp;</div>
+  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif; color: white;" id="adjective-here">replaced</div>
+  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif; color: white;">&nbsp;</div>
+  <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif; color: white;" id="vocation-here">foundation</div>
 <script type="text/javascript">
   window.onload = function startEverything() {
     overall();
