--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Top</title>
-<script type="text/javascript" src="main2.js"></script>
+<script type="text/javascript" src="main.js"></script>
 </head>
 <body style="background-color: black;">
   <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif; color: white;">&nbsp;</div>
