--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Top</title>
 <script type="text/javascript" src="main.js"></script>
 </head>
-<body style="background-color: black;">
+<body style="background-color: red;">
   <div id="margin-top">&nbsp;</div>
   <div style="text-align:center; font: 8em Helvetica, Arial, sans-serif; color: white;" id="adjective-here">replaced</div>
   <div style="font-size: 8em;">&nbsp;</div>
